--- a/angular.json
+++ b/angular.json
@@ -133,6 +133,46 @@
           }
         }
       }
+    },
+    "bn-ng-file-explorer": {
+      "root": "projects/bn-ng-file-explorer",
+      "sourceRoot": "projects/bn-ng-file-explorer/src",
+      "projectType": "library",
+      "prefix": "bn",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/bn-ng-file-explorer/tsconfig.lib.json",
+            "project": "projects/bn-ng-file-explorer/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/bn-ng-file-explorer/src/test.ts",
+            "tsConfig": "projects/bn-ng-file-explorer/tsconfig.spec.json",
+            "karmaConfig": "projects/bn-ng-file-explorer/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/bn-ng-file-explorer/tsconfig.lib.json",
+              "projects/bn-ng-file-explorer/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "ng-file-explorer"
